--- a/escom-bpm-web/src/main/webapp/view/admin/update/check-release.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/update/check-release.xhtml
@@ -4,15 +4,14 @@
                  xmlns:pe="http://primefaces.org/ui/extensions"
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
-                 template="/view/templ/templ.xhtml">
+                 template="/view/templ/templ-dlg.xhtml">
 
-    <ui:param name="_frm" value="checkFRM" />
+    <ui:param name="_bean" value="#{checkReleaseBean}"/>
         
     <ui:define name="systems">
         <script language="javascript" type="text/javascript">
-            var wsUri = "ws://localhost:8080/escom-bpm-info-1.0-SNAPSHOT/release_info";
-
-            function init() {           
+            function init(wsUri) {
+                console.log("connect to:" + wsUri);
                 websocket = new WebSocket(wsUri);
                 websocket.onopen = function (evt) {
                     onOpen(evt)
@@ -27,20 +26,22 @@
 
             function onOpen(evt) {
                 console.log("CONNECTED");
+                document.getElementById('centerFRM:btnRefresh').click();
             }
 
             function onMessage(evt) {
                 console.log("RECEIVED: " + evt.data);
                 var json = JSON.parse(evt.data); 
-                document.getElementById('#{_frm}:actualRelease').value = json.number;
-                document.getElementById('#{_frm}:pageRelease').value = json.page;
-                document.getElementById('#{_frm}:dateRelease').value = json.date;
-                document.getElementById('#{_frm}:versionRelease').value = json.version;
+                document.getElementById('centerFRM:actualRelease').value = json.number;
+                document.getElementById('centerFRM:pageRelease').value = json.page;
+                document.getElementById('centerFRM:dateRelease').value = json.date;
+                document.getElementById('centerFRM:versionRelease').value = json.version;
                 updateReleaseInfo();
             }
 
             function onError(evt) {
                 console.log('ERROR: ' + evt.data);
+                document.getElementById('centerFRM:connectStatus').value = "disconnected";
             }
 
             function doSend(message) {
@@ -48,108 +49,80 @@
                 websocket.send(message);
             }
 
-            window.addEventListener("load", init, false);
-
+            window.onbeforeunload = function() {
+                websocket.onclose = function () {}; // disable onclose handler first
+                websocket.close()
+            };
+            ///window.addEventListener("load", init, false);
         </script>
-    </ui:define>
-
-    <ui:define name="preRendered">
-        <f:metadata>
-            <f:event type="preRenderView" listener="#{checkReleaseBean.onOpenCard()}"/>
-        </f:metadata>
     </ui:define>
 
     <ui:define name="title">
         #{bundle.CheckUpdates}
     </ui:define>
-    
-    <ui:define name="body">                
-        <pe:layout fullPage="true" options="#{checkReleaseBean.layoutOptions}" widgetVar="fpLayoutWidget">
-            <p:ajax event="resize" listener="#{checkReleaseBean.handleResize}"/> 
-            <pe:layoutPane position="center" resizable="true">
-                <h:form id="#{_frm}" style="font-size: 90%;"> 
-                    <p:remoteCommand name="updateReleaseInfo" action="#{checkReleaseBean.updateReleaseInfo()}"/>
-                    <p:hotkey bind="esc" id="hotskey"
-                              immediate="true"                             
-                              onstart="document.getElementById('#{_frm}:btnClose').click();"> 
-                    </p:hotkey>
-                    <p:menubar styleClass="without-spaces">
-                        <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">
-                            <p:menuitem icon="ui-icon-circle-close" value="#{bundle.Close}"
-                                        onclick="document.getElementById('#{_frm}:btnClose').click();"> 
-                            </p:menuitem>
-                        </p:submenu>
-                        <f:facet name="options">
-                            <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float:right;"
-                                             title="#{bundle.Close}"
-                                             action="#{checkReleaseBean.onCloseCard()}"> 
-                            </p:commandButton> 
-                        </f:facet>
-                    </p:menubar>                
 
-                    <p:inputText id="dateRelease" value="#{checkReleaseBean.strDateRelease}" style="display: none;"/>                    
-                    <p:inputText id="versionRelease" value="#{checkReleaseBean.versionRelease}" style="display: none;"/>
-                    <p:inputText id="actualRelease" value="#{checkReleaseBean.releaseNumber}" style="display: none;"/>
-                    <p:inputText id="pageRelease" value="#{checkReleaseBean.pageRelease}" style="display: none;"/>
+    <ui:define name="menuActions" >
+        <p:menuitem icon="ui-icon-arrowrefresh-1-w" value="#{bundle.Refresh}"
+                    onclick="document.getElementById('centerFRM:btnRefresh').click();">
+        </p:menuitem>
+    </ui:define>
 
-                    <p:messages id="messages" showDetail="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
-                        <p:autoUpdate />
-                    </p:messages>
-                    
-                    <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-6, ui-grid-col-6" styleClass="ui-grid-col-12">
-                        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 ">
-                            <h:panelGroup>
-                                <p:outputLabel value="#{bundle.ActualRelease}" />
-                                <p:separator/>
-                            </h:panelGroup>
+    <ui:define name="toolbarComponents" >
+        <p:commandButton id="btnRefresh" value="#{bundle.Refresh}" title="#{bundle.CheckUpdates}"
+                     onclick="doSend('#{checkReleaseBean.licence.licenceNumber}')"/>
+    </ui:define>
 
-                            <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
-                                <h:outputLabel value="#{bundle.Version}:" />
-                                <p:inputText value="#{checkReleaseBean.versionRelease}" readonly="true"/>
+    <ui:define name="centerFormContent">
+        <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-6, ui-grid-col-6" styleClass="ui-grid-col-12 col-padding">
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">
+                <h:panelGroup>
+                    <p:outputLabel value="#{bundle.ActualRelease}" />
+                    <p:separator/>
+                </h:panelGroup>
 
-                                <h:outputLabel value="#{bundle.Number}:" />
-                                <p:inputText value="#{checkReleaseBean.releaseNumber}" readonly="true"/>                                    
+                <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
+                    <h:outputLabel value="#{bundle.Version}:" />
+                    <p:inputText value="#{checkReleaseBean.versionRelease}" readonly="true"/>
 
-                                <h:outputLabel value="#{bundle.Date}:" />
-                                <p:inputText value="#{checkReleaseBean.dateRelease}" readonly="true">
-                                    <f:convertDateTime type="date" dateStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
-                                </p:inputText>
+                    <h:outputLabel value="#{bundle.Number}:" />
+                    <p:inputText value="#{checkReleaseBean.releaseNumber}" readonly="true"/>
 
-                                <p:spacer/>
-                                <p:commandLink value="#{bundle.GoToSupport}"
-                                                   actionListener="#{checkReleaseBean.onGotoSupportPage}" target="_blank"/>                                
-                                
-                                <p:spacer/>
-                                <p:separator />
-                                
-                                <p:spacer/>
-                                <p:commandButton icon="ui-icon-arrowrefresh-1-w" value="#{bundle.Refresh}" title="#{bundle.CheckUpdates}"
-                                                     onclick="doSend('#{checkReleaseBean.licence.licenceNumber}')"/>
-                            </p:panelGrid>
-                        </p:panelGrid>
-                        
-                        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 ">                            
-                            <h:panelGroup>
-                                <p:outputLabel value="#{bundle.CurrentRelease}" /> 
-                                <p:separator/>
-                            </h:panelGroup>
+                    <h:outputLabel value="#{bundle.Date}:" />
+                    <p:inputText value="#{checkReleaseBean.dateRelease}" readonly="true">
+                        <f:convertDateTime type="date" dateStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
+                    </p:inputText>
 
-                            <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="ui-grid-col-12">
-                                <h:outputLabel value="#{bundle.Version}:" />
-                                <p:inputText value="#{checkReleaseBean.licence.versionNumber}" readonly="true" />
+                    <p:spacer/>
+                    <p:commandLink value="#{bundle.GoToSupport}"
+                               actionListener="#{checkReleaseBean.onGotoSupportPage}" target="_blank"/>
 
-                                <h:outputLabel value="#{bundle.Number}:" />
-                                <p:inputText value="#{checkReleaseBean.licence.releaseNumber}" readonly="true" />
+                </p:panelGrid>
+            </p:panelGrid>
 
-                                <h:outputLabel value="#{bundle.Date}:" />
-                                <p:inputText value="#{checkReleaseBean.licence.releaseDate}" readonly="true" >
-                                    <f:convertDateTime type="date" dateStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
-                                </p:inputText>
-                            </p:panelGrid>
-                        </p:panelGrid>
-                    </p:panelGrid>
-                </h:form>
-            </pe:layoutPane>
-        </pe:layout>
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 ">
+                <h:panelGroup>
+                    <p:outputLabel value="#{bundle.CurrentRelease}" />
+                    <p:separator/>
+                </h:panelGroup>
+
+                <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="ui-grid-col-12">
+                    <h:outputLabel value="#{bundle.Version}:" />
+                    <p:inputText value="#{checkReleaseBean.licence.versionNumber}" readonly="true" />
+
+                    <h:outputLabel value="#{bundle.Number}:" />
+                    <p:inputText value="#{checkReleaseBean.licence.releaseNumber}" readonly="true" />
+
+                    <h:outputLabel value="#{bundle.Date}:" />
+                    <p:inputText value="#{checkReleaseBean.licence.releaseDate}" readonly="true" >
+                        <f:convertDateTime type="date" dateStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
+                    </p:inputText>
+                </p:panelGrid>
+            </p:panelGrid>
+        </p:panelGrid>
+        <p:remoteCommand name="updateReleaseInfo" action="#{checkReleaseBean.updateReleaseInfo()}"/>
+        <p:inputText id="dateRelease" value="#{checkReleaseBean.strDateRelease}" style="display: none;"/>
+        <p:inputText id="versionRelease" value="#{checkReleaseBean.versionRelease}" style="display: none;"/>
+        <p:inputText id="actualRelease" value="#{checkReleaseBean.releaseNumber}" style="display: none;"/>
+        <p:inputText id="pageRelease" value="#{checkReleaseBean.pageRelease}" style="display: none;"/>
     </ui:define>
 </ui:composition>
