--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -34,7 +34,7 @@
                                   onstart="document.getElementById('centerFRM:btnClose').click();">
                         </p:hotkey>
 
-                        <p:messages id="messages" showDetail="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
+                        <p:messages id="messages" showDetail="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 without-spaces">
                             <p:autoUpdate />
                         </p:messages>
 
