--- a/escom-bpm-web/src/main/webapp/view/admin/object-admin.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/object-admin.xhtml
@@ -4,93 +4,58 @@
                  xmlns:pe="http://primefaces.org/ui/extensions"
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
-                 template="/view/templ/templ.xhtml">
-
-    <ui:define name="preRendered">
-        <f:metadata>
-            <f:event type="preRenderView" listener="#{admObjectBean.onOpenCard()}"/>
-        </f:metadata>
-    </ui:define>
+                 template="/view/templ/templ-dlg.xhtml">
 
     <ui:define name="title">
         #{bundle.Administation}
     </ui:define>
 
-    <ui:param name="_frm" value="admForm" />
-    
-    <ui:define name="body">
-        <pe:layout fullPage="true" options="#{admObjectBean.layoutOptions}" widgetVar="fpLayoutWidget">
-            <p:ajax event="resize" listener="#{admObjectBean.handleResize}"/> 
-            <pe:layoutPane position="center" resizable="true">
-                <h:form id="#{_frm}" style="font-size: 90%;">
-                    
-                    <p:hotkey bind="esc" id="hotskey"
-                              immediate="true"                             
-                              onstart="document.getElementById('#{_frm}:btnClose').click();"> 
-                    </p:hotkey>
-                    
-                    <p:menubar styleClass="without-spaces">
-                        <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">
-                            <p:menuitem icon="ui-icon-circle-close" value="#{bundle.Close}"
-                                        onclick="document.getElementById('#{_frm}:btnClose').click();"> 
-                            </p:menuitem>
-                        </p:submenu>
-                        <f:facet name="options">
-                            <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float:right;"
-                                             title="#{bundle.Close}"
-                                             immediate="true"
-                                             action="#{admObjectBean.onCloseCard()}"> 
-                            </p:commandButton> 
-                        </f:facet>
-                    </p:menubar>
-                    
-                    <p:messages id="messages" showDetail="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
-                        <p:autoUpdate />
-                    </p:messages>
-                    
-                    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">                        
-                        <p:tabView orientation="left" id="mainTabView" rendered="#{admObjectBean.itemBean != null}" >
-                            <p:tab title="#{bundle.Replace}">
-                                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
-                                    <h:panelGroup styleClass="ui-grid-col-12">
-                                        <p:outputLabel value="#{bundle.Object}:" />
-                                        <p:spacer width="3"/>
-                                        <h:outputText value="#{admObjectBean.sourceItem.name}"/>
-                                    </h:panelGroup>
+    <ui:param name="_bean" value="#{admObjectBean}"/>
 
-                                    <p:outputLabel value="#{bundle.UsesIn}:"/>
-                                    <p:dataGrid var="usesIn" value="#{admObjectBean.countUsesItem()}" columns="1" layout="grid">
-                                        <p:outputPanel>
-                                            <h:panelGrid columns="2" columnClasses="ui-grid-col-4, ui-grid-col-2" styleClass="ui-grid-col-12">
-                                                <h:outputText value="#{admObjectBean.getLabelFromBundle(usesIn.getKey()) }"/>
-                                                <p:outputLabel value="#{usesIn.getValue()}" style="color: red;"/>
-                                            </h:panelGrid>
-                                        </p:outputPanel>
-                                    </p:dataGrid>
+    <ui:define name="menuActions" >
+    </ui:define>
 
-                                    <p:outputLabel value="#{bundle.ReplaceItemInObjects}"/> 
-                                    <p:inputText value="#{admObjectBean.replaceItem.name}" title="#{bundle.ValueReplace}" 
-                                                 id="itemInputPanel"
-                                                 styleClass="ui-grid-col-12"
-                                                 readonly="true"/>
-                                    <h:panelGroup>
-                                        <p:commandButton value="#{bundle.Select}" 
-                                                         process="@this" 
-                                                         actionListener="#{admObjectBean.itemBean.onOneSelectItem()}" >
-                                            <p:ajax event="dialogReturn" update="#{_frm}:mainTabView" listener="#{admObjectBean.onSelectChangeItem}"/>
-                                        </p:commandButton>
+    <ui:define name="toolbarComponents" >
+    </ui:define>
 
-                                        <p:commandButton value="#{bundle.Execute}" update="#{_frm}"                                        
-                                                         disabled="#{admObjectBean.replaceItem == null}"
-                                                         action="#{admObjectBean.onReplaceItem()}"/>
-                                    </h:panelGroup>
-                                </p:panelGrid>
-                            </p:tab>
-                        </p:tabView> 
-                    </p:panelGrid>
-                    <ui:include src="/view/common/confirm-dlg.xhtml"/>
-                </h:form>
-            </pe:layoutPane>
-        </pe:layout>
+    <ui:define name="centerFormContent">
+        <p:tabView orientation="left" id="mainTabView" rendered="#{admObjectBean.itemBean != null}" >
+            <p:tab title="#{bundle.Replace}">
+                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
+                    <h:panelGroup styleClass="ui-grid-col-12">
+                        <p:outputLabel value="#{bundle.Object}:" />
+                        <p:spacer width="3"/>
+                        <h:outputText value="#{admObjectBean.sourceItem.name}"/>
+                    </h:panelGroup>
+
+                    <p:outputLabel value="#{bundle.UsesIn}:"/>
+                    <p:dataGrid var="usesIn" value="#{admObjectBean.countUsesItem()}" columns="1" layout="grid">
+                        <p:outputPanel>
+                            <h:panelGrid columns="2" columnClasses="ui-grid-col-4, ui-grid-col-2" styleClass="ui-grid-col-12">
+                                <h:outputText value="#{admObjectBean.getLabelFromBundle(usesIn.getKey()) }"/>
+                                <p:outputLabel value="#{usesIn.getValue()}" style="color: red;"/>
+                            </h:panelGrid>
+                        </p:outputPanel>
+                    </p:dataGrid>
+
+                    <p:outputLabel value="#{bundle.ReplaceItemInObjects}"/>
+                    <p:inputText value="#{admObjectBean.replaceItem.name}" title="#{bundle.ValueReplace}"
+                                 id="itemInputPanel"
+                                 styleClass="ui-grid-col-12"
+                                 readonly="true"/>
+                    <h:panelGroup>
+                        <p:commandButton value="#{bundle.Select}"
+                                         process="@this"
+                                         actionListener="#{admObjectBean.itemBean.onOneSelectItem()}" >
+                            <p:ajax event="dialogReturn" update="centerFRM:mainTabView" listener="#{admObjectBean.onSelectChangeItem}"/>
+                        </p:commandButton>
+
+                        <p:commandButton value="#{bundle.Execute}" update="centerFRM"
+                                         disabled="#{admObjectBean.replaceItem == null}"
+                                         action="#{admObjectBean.onReplaceItem()}"/>
+                    </h:panelGroup>
+                </p:panelGrid>
+            </p:tab>
+        </p:tabView>
     </ui:define>
 </ui:composition>
