сообщения, право на создание, обозреватель объектов, карточка права

--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -165,7 +165,10 @@ body{
     vertical-align: central;
     text-align: center;
 }
-        
+
+.ui-messages-error ui-corner-all{
+    margin: 5px !important;
+}
 .ui-panelgrid-content {
     border: none !important;
 }
@@ -216,6 +219,7 @@ body{
     text-wrap: normal;
     width: auto;
     float: left;
+    font-weight: normal;
   }
 
 .title{
