--- a/escom-bpm-web/src/main/webapp/view/admin/rights/rightCard.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/rights/rightCard.xhtml
@@ -5,167 +5,118 @@
     xmlns:pe="http://primefaces.org/ui/extensions"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
-    template="/view/templ/templ.xhtml">  
-
-    <ui:define name="preRendered">
-        <f:metadata>
-            <f:event type="preRenderView" listener="#{rightCardBean.onOpenCard()}"/>
-        </f:metadata>
-    </ui:define>
+    template="/view/templ/templ-dlg.xhtml">
 
     <ui:define name="title">
-        #{bundle.Rights}
+        #{bundle.RightsFor} #{bundle.State} [#{rightCardBean.stateName}]
     </ui:define>
 
-    <ui:param name="_frm" value="frmRightEdit" />
+    <ui:param name="_bean" value="#{rightCardBean}"/>
 
-    <ui:define name="body">
-        <script type="text/javascript" >
-            var itemChange = 0;
-        </script>
+    <ui:define name="menuActions" >
+        <p:menuitem icon="ui-icon-circle-check" value="#{bundle.SaveAndClose}"
+                    onclick="document.getElementById('centerFRM:btnSave').click();">
+        </p:menuitem>
+    </ui:define>
 
-        <pe:layout fullPage="true" options="#{rightCardBean.layoutOptions}" widgetVar="fpLayoutWidget">
-            <p:ajax event="resize" listener="#{rightCardBean.handleResize}"/> 
-            <pe:layoutPane position="center" resizable="true">
-                <h:form id="#{_frm}" style="font-size: 90%;">
+    <ui:define name="toolbarComponents" >
+        <p:commandButton id="btnSave" value="#{bundle.SaveAndClose}"
+                         title="#{bundle.SaveAndClose}"
+                         update="centerFRM"
+                         action="#{rightCardBean.onSaveChangeRight()}"
+                         onclick="if (itemChange == 1)
+                                                 onChangeItem();">
+            <f:param name="isRequired" value="true"/>
+        </p:commandButton>
+    </ui:define>
 
-                    <p:hotkey bind="esc" id="hotskey"
-                              immediate="true"                             
-                              onstart="document.getElementById('#{_frm}:btnClose').click();"> 
-                    </p:hotkey>
+    <ui:define name="centerFormContent">
+        <p:spacer/>
+        <p:outputLabel value="#{bundle.RrightsAreSet}:" />
+        <p:selectOneRadio id="rbRightType" value="#{rightCardBean.selRight.objType}" layout="custom" style="float: right;"
+                          valueChangeListener="#{rightCardBean.onTypeChangeRight}">
+            <f:selectItem itemLabel="#{bundle.ForGroup}" itemValue="0" />
+            <f:selectItem itemLabel="#{bundle.ForUser}"  itemValue="1" />
+            <f:selectItem itemLabel="#{bundle.ForRole}"  itemValue="2" />
+            <p:ajax event="valueChange" update="centerFRM" oncomplete="itemChange = 1;"/>
+        </p:selectOneRadio>
 
-                    <p:remoteCommand name="onChangeItem" immediate="true" 
-                                     actionListener="#{rightCardBean.onItemChange()}"
-                                     oncomplete="return itemChange = 0;">            
-                    </p:remoteCommand>
+        <p:panelGrid id="options" columns="3" styleClass="ui-panelgrid-blank">
+            <p:outputLabel value="#{bundle.ForUser}"
+                           styleClass="#{rightCardBean.selRight.objType == 1 ? '': 'value'}"
+                           indicateRequired="#{rightCardBean.selRight.objType == 1}"/>
+            <p:radioButton id="optUser" for="rbRightType" itemIndex="1" />
+            <p:selectOneMenu id="selUser" value="#{rightCardBean.selUser}" filter="true" filterMatchMode="startsWith"
+                             valueChangeListener="#{rightCardBean.onUserChange}" styleClass="ui-grid-col-12"
+                             required="#{param['isRequired'] == 'true' and rightCardBean.selRight.objType == 1}"
+                             requiredMessage="#{bundle.Field} [#{bundle.ForUser}] #{bundle.MustBeFilled}"
+                             converter="usersConvertor"
+                             disabled="#{rightCardBean.selRight.objType != 1}">
+                <f:selectItems value="#{rightCardBean.users}" var="users" itemLabel="#{users.shortFIO}" itemValue="#{users}"/>
+                <f:selectItem itemValue="#{rightCardBean.selUser}" itemLabel="#{rightCardBean.selUser.shortFIO}" />
+                <p:ajax event="change" update="centerFRM:options" oncomplete="itemChange = 1;"/>
+            </p:selectOneMenu>
 
-                    <p:menubar styleClass="without-spaces">
-                        <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">
-                            <p:menuitem icon="ui-icon-circle-check" value="#{bundle.SaveAndClose}"
-                                        onclick="document.getElementById('#{_frm}:btnSave').click();"> 
-                            </p:menuitem>
-                            <p:separator />
-                            <p:menuitem icon="ui-icon-circle-close" value="#{bundle.Close}"
-                                        onclick="document.getElementById('#{_frm}:btnClose').click();"> 
-                            </p:menuitem>
-                        </p:submenu>
-                        <f:facet name="options">
- 
-                            <p:commandButton id="btnSave" value="#{bundle.SaveAndClose}" 
-                                             title="#{bundle.SaveAndClose}"
-                                             update="#{_frm}"
-                                             action="#{rightCardBean.onSaveChangeRight()}"
-                                             onclick="if (itemChange == 1)
-                                                 onChangeItem();"> 
-                            </p:commandButton> 
-                            <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float: right;"
-                                             title="#{bundle.Cancel}"
-                                             immediate="true"
-                                             action="#{rightCardBean.onCancelSave()}"
-                                             onclick="if (itemChange == 1)
-                                                 onChangeItem();"/>
-                        </f:facet>
-                    </p:menubar>
+            <p:outputLabel value="#{bundle.ForGroup}"
+                           styleClass="#{rightCardBean.selRight.objType == 0 ? '': 'value'}"
+                           indicateRequired="#{rightCardBean.selRight.objType == 0}" />
+            <p:radioButton id="optGroup" for="rbRightType" itemIndex="0" />
+            <p:selectOneMenu id="selGroup" value="#{rightCardBean.selUsGroup}"  filter="true" filterMatchMode="startsWith"
+                             valueChangeListener="#{rightCardBean.onGroupChange}" styleClass="ui-grid-col-12"
+                             required="#{param['isRequired'] == 'true' and rightCardBean.selRight.objType == 0}"
+                             requiredMessage="#{bundle.Field} [#{bundle.ForGroup}] #{bundle.MustBeFilled}"
+                             converter="groupsUserConvertor"
+                             disabled="#{rightCardBean.selRight.objType != 0}" >
+                <f:selectItems value="#{rightCardBean.userGroupses}" var="groups" itemLabel="#{groups.name}" itemValue="#{groups}"/>
+                <f:selectItem itemValue="#{rightCardBean.selUsGroup}" itemLabel="#{rightCardBean.selUsGroup.name}" />
+                <p:ajax event="change" update="centerFRM:options" oncomplete="itemChange = 1;"/>
+            </p:selectOneMenu>
 
-                    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">
-                        <p:messages id="messages" showDetail="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
-                            <p:autoUpdate />
-                        </p:messages>
+            <p:outputLabel value="#{bundle.ForRole}"
+                           styleClass="#{rightCardBean.selRight.objType == 2 ? '': 'value'}"
+                           indicateRequired="#{rightCardBean.selRight.objType == 2}"/>
+            <p:radioButton id="optRole" for="rbRightType" itemIndex="2" />
+            <p:selectOneMenu id="selRole" value="#{rightCardBean.selUsRole}"  filter="true" filterMatchMode="startsWith"
+                             valueChangeListener="#{rightCardBean.onRoleChange}" styleClass="ui-grid-col-12"
+                             converter="groupsUserConvertor"
+                             required="#{param['isRequired'] == 'true' and rightCardBean.selRight.objType == 2}"
+                             requiredMessage="#{bundle.Field} [#{bundle.ForRole}] #{bundle.MustBeFilled}"
+                             disabled="#{rightCardBean.selRight.objType != 2}" >
+                <f:selectItems value="#{rightCardBean.roles}" var="groups" itemLabel="#{groups.name}" itemValue="#{groups}"/>
+                <f:selectItem itemValue="#{rightCardBean.selUsRole}" itemLabel="#{rightCardBean.selUsRole.name}" />
+                <p:ajax event="change" update="centerFRM:options" oncomplete="itemChange = 1;"/>
+            </p:selectOneMenu>
+        </p:panelGrid>
 
-                        <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12 col-padding">
-                            <h:outputLabel value="#{bundle.Object}:" rendered="#{rightCardBean.selRight.objLink != null}"/>
-                            <p:outputLabel value="#{rightCardBean.getObjName(rightCardBean.selRight.objLink)}" rendered="#{rightCardBean.selRight.objLink != null}"/>
-                            
-                            <h:outputLabel value="#{bundle.ForState}:"/>
-                            <p:outputLabel value="#{rightCardBean.stateName}"/>
-                           
-                            <h:outputLabel value="#{rightCardBean.typeName}:" />
-                            <p:outputLabel value="#{rightCardBean.selRight.name}" id="lbRightName"/> 
+        <p:separator />
 
-                        </p:panelGrid>
+        <h:panelGrid columns="1">
+            <p:selectBooleanCheckbox id="chBoxAll" itemLabel="#{bundle.All}"
+                                     valueChangeListener="#{rightCardBean.onChangeAllRight}"
+                                     title="#{bundle.CheckUncheck}">
+                <p:ajax update="chBoxPanel" oncomplete="itemChange = 1;"/>
+            </p:selectBooleanCheckbox>
+        </h:panelGrid>
 
-                        <p:selectOneRadio id="rbRightType" value="#{rightCardBean.selRight.objType}" layout="custom" style="float: right;"
-                                          valueChangeListener="#{rightCardBean.onTypeChangeRight}">
-                            <f:selectItem itemLabel="#{bundle.ForGroup}" itemValue="0" />
-                            <f:selectItem itemLabel="#{bundle.ForUser}"  itemValue="1" />
-                            <f:selectItem itemLabel="#{bundle.ForRole}"  itemValue="2" />
-                            <p:ajax event="valueChange" update="#{_frm}" oncomplete="itemChange = 1;"/>
-                        </p:selectOneRadio>
+        <h:panelGrid id="chBoxPanel" columns="6" >
+            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.read}" id="chBoxRead"
+                                     itemLabel="#{bundle.View}" onchange="itemChange = 1;"/>
 
-                        <p:panelGrid columns="3" styleClass="ui-panelgrid-blank">
-                            <p:outputLabel value="#{bundle.ForUser}"/>
-                            <p:radioButton id="optUser" for="rbRightType" itemIndex="1" />                        
-                            <p:selectOneMenu id="selUser" value="#{rightCardBean.selUser}" filter="true" filterMatchMode="startsWith" 
-                                             valueChangeListener="#{rightCardBean.onUserChange}" styleClass="ui-grid-col-12"
-                                             required="#{rightCardBean.selRight.objType == 1}"
-                                             requiredMessage="#{bundle.Field} [#{bundle.ForUser}] #{bundle.MustBeFilled}"
-                                             converter="usersConvertor" 
-                                             disabled="#{rightCardBean.selRight.objType != 1}">                    
-                                <f:selectItems value="#{rightCardBean.users}" var="users" itemLabel="#{users.shortFIO}" itemValue="#{users}"/>
-                                <f:selectItem itemValue="#{rightCardBean.selUser}" itemLabel="#{rightCardBean.selUser.shortFIO}" />
-                                <p:ajax event="change" update="#{_frm}:lbRightName" oncomplete="itemChange = 1;"/>
-                            </p:selectOneMenu>
+            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.update}" id="chBoxUpdate"
+                                     itemLabel="#{bundle.Edit}" onchange="itemChange = 1;"/>
 
-                            <p:outputLabel value="#{bundle.ForGroup}"/>
-                            <p:radioButton id="optGroup" for="rbRightType" itemIndex="0" />
-                            <p:selectOneMenu id="selGroup" value="#{rightCardBean.selUsGroup}"  filter="true" filterMatchMode="startsWith"
-                                             valueChangeListener="#{rightCardBean.onGroupChange}" styleClass="ui-grid-col-12"
-                                             required="#{rightCardBean.selRight.objType == 0}"
-                                             requiredMessage="#{bundle.Field} [#{bundle.ForGroup}] #{bundle.MustBeFilled}"
-                                             converter="groupsUserConvertor"
-                                             disabled="#{rightCardBean.selRight.objType != 0}" >
-                                <f:selectItems value="#{rightCardBean.userGroupses}" var="groups" itemLabel="#{groups.name}" itemValue="#{groups}"/>
-                                <f:selectItem itemValue="#{rightCardBean.selUsGroup}" itemLabel="#{rightCardBean.selUsGroup.name}" />
-                                <p:ajax event="change" update="#{_frm}:lbRightName" oncomplete="itemChange = 1;"/>
-                            </p:selectOneMenu>
-                            
-                            <p:outputLabel value="#{bundle.ForRole}"/>
-                            <p:radioButton id="optRole" for="rbRightType" itemIndex="2" />
-                            <p:selectOneMenu id="selRole" value="#{rightCardBean.selUsRole}"  filter="true" filterMatchMode="startsWith"
-                                             valueChangeListener="#{rightCardBean.onRoleChange}" styleClass="ui-grid-col-12"
-                                             converter="groupsUserConvertor"
-                                             required="#{rightCardBean.selRight.objType == 2}"
-                                             requiredMessage="#{bundle.Field} [#{bundle.ForRole}] #{bundle.MustBeFilled}"
-                                             disabled="#{rightCardBean.selRight.objType != 2}" >
-                                <f:selectItems value="#{rightCardBean.roles}" var="groups" itemLabel="#{groups.name}" itemValue="#{groups}"/>
-                                <f:selectItem itemValue="#{rightCardBean.selUsRole}" itemLabel="#{rightCardBean.selUsRole.name}" />
-                                <p:ajax event="change" update="#{_frm}:lbRightName" oncomplete="itemChange = 1;"/>
-                            </p:selectOneMenu>
-                        </p:panelGrid>
+            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.create}" id="chBoxCreate"
+                                     rendered="#{rightCardBean.isShowCreateRight()}"
+                                     itemLabel="#{bundle.Create}" onchange="itemChange = 1;"/>
 
-                        <p:separator />
+            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.delete}" id="chBoxDelete"
+                                     itemLabel="#{bundle.Delete}" onchange="itemChange = 1;"/>
 
-                        <h:panelGrid columns="1">
-                            <p:selectBooleanCheckbox id="chBoxAll" itemLabel="#{bundle.All}"
-                                                     valueChangeListener="#{rightCardBean.onChangeAllRight}" 
-                                                     title="#{bundle.CheckUncheck}">
-                                <p:ajax update="chBoxPanel" oncomplete="itemChange = 1;"/>
-                            </p:selectBooleanCheckbox>
-                        </h:panelGrid>
+            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.changeRight}" id="chBoxRight"
+                                     itemLabel="#{bundle.ChangeRight}" onchange="itemChange = 1;"/>
 
-                        <h:panelGrid id="chBoxPanel" columns="6" >
-                            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.read}" id="chBoxRead"
-                                                     itemLabel="#{bundle.View}" onchange="itemChange = 1;"/>
-
-                            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.update}" id="chBoxUpdate"
-                                                     itemLabel="#{bundle.Edit}" onchange="itemChange = 1;"/>
-
-                            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.create}" id="chBoxCreate"
-                                                     itemLabel="#{bundle.Create}" onchange="itemChange = 1;"/>
-
-                            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.delete}" id="chBoxDelete"
-                                                     itemLabel="#{bundle.Delete}" onchange="itemChange = 1;"/>
-
-                            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.changeRight}" id="chBoxRight"
-                                                     itemLabel="#{bundle.ChangeRight}" onchange="itemChange = 1;"/>
-                            
-                            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.addChild}"
-                                                     itemLabel="#{bundle.AddChildsRight}" onchange="itemChange = 1;"/>                            
-                        </h:panelGrid>
-                    </p:panelGrid>
-
-                </h:form>
-            </pe:layoutPane>
-        </pe:layout>
+            <p:selectBooleanCheckbox value="#{rightCardBean.selRight.addChild}"
+                                     itemLabel="#{bundle.AddChildsRight}" onchange="itemChange = 1;"/>
+        </h:panelGrid>
     </ui:define>
 </ui:composition>
