--- a/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
@@ -4,117 +4,88 @@
                  xmlns:pe="http://primefaces.org/ui/extensions"
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
-                 template="/view/templ/templ.xhtml">
-
-    <ui:define name="preRendered">
-        <f:metadata>
-            <f:event type="preRenderView" listener="#{userMsgBean.onOpenCard()}"/>
-        </f:metadata>
-    </ui:define>
+                 template="/view/templ/templ-dlg.xhtml">
 
     <ui:define name="title">
         #{bundle.Messages}
     </ui:define>
 
-    <ui:param name="_frm" value="msgForm" />    
-        
-    <ui:define name="body">      
-        <pe:layout fullPage="true" options="#{userMsgBean.layoutOptions}" widgetVar="fpLayoutWidget">
-            <p:ajax event="resize" listener="#{userMsgBean.handleResize}"/> 
-            <pe:layoutPane position="center" resizable="true">
-                <h:form id="#{_frm}" style="font-size: 90%;"> 
-                    <p:commandButton id="openDocBtn" style="display: none;"                                           
-                                     actionListener="#{userMsgBean.onGoToDocument()}"> 
-                        <p:ajax event="dialogReturn" update="messageTBL"/>
-                    </p:commandButton> 
-                    <p:hotkey bind="esc" id="hotskey"
-                              immediate="true"                             
-                              onstart="document.getElementById('#{_frm}:btnClose').click();"> 
-                    </p:hotkey>
-                    <p:menubar styleClass="without-spaces">
-                        <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">
-                            <p:menuitem icon="ui-icon-check" value="#{bundle.MarkAsReads}" title="#{bundle.MarkAllAsRead}"
-                                        disabled="#{userMsgBean.messages.isEmpty()}"                                        
-                                        onclick="document.getElementById('#{_frm}:btnMarkAllAsRead').click();"> 
-                            </p:menuitem>
-                            <p:menuitem icon="ui-icon-refresh" value="#{bundle.Refresh}"
-                                        update="#{_frm}" actionListener="#{userMsgBean.refresh()}"> 
-                            </p:menuitem>
-                            <p:separator />
-                            <p:menuitem icon="ui-icon-circle-close" value="#{bundle.Close}"
-                                        onclick="document.getElementById('#{_frm}:btnClose').click();"> 
-                            </p:menuitem>
-                        </p:submenu>
-                        <f:facet name="options">                                                        
-                            <p:commandButton id="btnMarkAllAsRead" value="#{bundle.MarkAsReads}" title="#{bundle.MarkAllAsRead}"
-                                             disabled="#{userMsgBean.messages.isEmpty()}"
-                                             update="#{_frm}"
-                                             actionListener="#{userMsgBean.markAsRead()}"> 
-                            </p:commandButton>
-                            <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float:right;"
-                                             title="#{bundle.Close}"
-                                             immediate="true" onclick="return isClose = 1;"
-                                             action="#{userMsgBean.onCloseCard()}"> 
-                            </p:commandButton> 
-                        </f:facet>
-                    </p:menubar>                                                            
-                    
-                    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">
-                        <p:messages id="messages" showDetail="true" closable="true" >
-                            <p:autoUpdate />
-                        </p:messages>
-                        <p:selectBooleanCheckbox value="#{userMsgBean.showOnlyUnread}"
-                                                itemLabel="#{bundle.ShowOnlyUnReadMessage}">
-                                <p:ajax update="#{_frm}" listener="#{userMsgBean.onChangeChBoxShowMsgType()}"/> 
-                        </p:selectBooleanCheckbox>
-                        <p:dataTable id="messageTBL" value="#{userMsgBean.messages}" 
-                                     emptyMessage="#{bundle.EmptyTable}"
-                                     paginator="true" paginatorPosition="bottom"                       
-                                     paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rowsPerPageTemplate="10,25,50" rows="10"
-                                     tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 col-padding"
-                                     var="item" sortBy="#{item.dateSent}" sortOrder="descending"
-                                     selection="#{userMsgBean.checkedMessages}">   
+    <ui:param name="_frm" value="msgForm" />
 
-                            <p:column selectionMode="multiple" style="width:16px;text-align:center"/>
-                            
-                            <p:column headerText="#{bundle.DateSend}" sortBy="#{item.dateSent}">
-                                <h:outputLabel value="#{item.dateSent}">
-                                    <f:convertDateTime pattern="dd.MM.yy : HH.mm"/>
-                                </h:outputLabel>
-                            </p:column>   
+    <ui:param name="_bean" value="#{userMsgBean}"/>
 
-                            <p:column headerText="#{bundle.Name}" sortBy="#{item.name}">
-                                <h:outputLabel value="#{item.name}"/>
-                            </p:column>
+    <ui:define name="menuActions" >
+        <p:menuitem icon="ui-icon-check" value="#{bundle.MarkAsReads}" title="#{bundle.MarkAllAsRead}"
+                    disabled="#{userMsgBean.messages.isEmpty()}"
+                    onclick="document.getElementById('centerFRM:btnMarkAllAsRead').click();">
+        </p:menuitem>
+        <p:menuitem icon="ui-icon-refresh" value="#{bundle.Refresh}"
+                    update="centerFRM" actionListener="#{userMsgBean.refresh()}">
+        </p:menuitem>
+    </ui:define>
 
-                            <p:column headerText="#{bundle.Sender}" sortBy="#{item.sender}">
-                                <h:outputLabel value="#{item.sender}"/>
-                            </p:column>   
+    <ui:define name="toolbarComponents" >
+        <p:commandButton id="btnMarkAllAsRead" value="#{bundle.MarkAsReads}" title="#{bundle.MarkAllAsRead}"
+                         disabled="#{userMsgBean.messages.isEmpty()}"
+                         update="centerFRM"
+                         actionListener="#{userMsgBean.markAsRead()}">
+        </p:commandButton>
+    </ui:define>
 
-                            <p:column headerText="#{bundle.DateRead}" sortBy="#{item.dateReading}">
-                                <h:outputLabel value="#{item.dateReading}" >
-                                    <f:convertDateTime pattern="dd.MM.yy : HH.mm"/>
-                                </h:outputLabel>
-                            </p:column> 
+    <ui:define name="centerFormContent">
+        <p:commandButton id="openDocBtn" style="display: none;"                                           
+                         actionListener="#{userMsgBean.onGoToDocument()}"> 
+            <p:ajax event="dialogReturn" update="messageTBL"/>
+        </p:commandButton>
 
-                            <p:column headerText="#{bundle.Doc}">
-                                <p:commandLink  value="#{bundle.GoToDocument}"
-                                                rendered="#{item.document != null}"
-                                                actionListener="#{userMsgBean.onSetSelectedMessage(item)}"
-                                                oncomplete="document.getElementById('#{_frm}:openDocBtn').click();"/>
-                            </p:column>
-                            <p:column >                    
-                                <p:commandButton icon="ui-icon-check" value="#{bundle.ReadIs}" title="#{bundle.MarkAsRead}"
-                                                update="messageTBL"
-                                                rendered="#{item.dateReading == null}"
-                                                actionListener="#{userMsgBean.markAsRead(item)}">                                    
-                                </p:commandButton>
-                            </p:column>
-                        </p:dataTable>                         
-                    </p:panelGrid>
-                </h:form>
-            </pe:layoutPane>
-        </pe:layout>
+            <p:selectBooleanCheckbox value="#{userMsgBean.showOnlyUnread}"
+                                    itemLabel="#{bundle.ShowOnlyUnReadMessage}">
+                    <p:ajax update="centerFRM" listener="#{userMsgBean.onChangeChBoxShowMsgType()}"/>
+            </p:selectBooleanCheckbox>
+            <p:dataTable id="messageTBL" value="#{userMsgBean.messages}"
+                         emptyMessage="#{bundle.EmptyTable}"
+                         paginator="true" paginatorPosition="bottom"
+                         paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                         rowsPerPageTemplate="10,25,50" rows="10" rowKey="#{item.id}"
+                         tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 col-padding"
+                         var="item" sortBy="#{item.dateSent}" sortOrder="descending"
+                         selection="#{userMsgBean.checkedMessages}">
+
+                <p:column selectionMode="multiple" style="width:16px;text-align:center"/>
+
+                <p:column headerText="#{bundle.DateSend}" sortBy="#{item.dateSent}">
+                    <h:outputLabel value="#{item.dateSent}">
+                        <f:convertDateTime pattern="dd.MM.yy : HH.mm"/>
+                    </h:outputLabel>
+                </p:column>
+
+                <p:column headerText="#{bundle.Name}" sortBy="#{item.name}">
+                    <h:outputLabel value="#{item.name}"/>
+                </p:column>
+
+                <p:column headerText="#{bundle.Sender}" sortBy="#{item.sender}">
+                    <h:outputLabel value="#{item.sender}"/>
+                </p:column>
+
+                <p:column headerText="#{bundle.DateRead}" sortBy="#{item.dateReading}">
+                    <h:outputLabel value="#{item.dateReading}" >
+                        <f:convertDateTime pattern="dd.MM.yy : HH.mm"/>
+                    </h:outputLabel>
+                </p:column>
+
+                <p:column headerText="#{bundle.Doc}">
+                    <p:commandLink  value="#{bundle.GoToDocument}"
+                                    rendered="#{item.document != null}"
+                                    actionListener="#{userMsgBean.onSetSelectedMessage(item)}"
+                                    oncomplete="document.getElementById('centerFRM:openDocBtn').click();"/>
+                </p:column>
+                <p:column >
+                    <p:commandButton icon="ui-icon-check" value="#{bundle.ReadIs}" title="#{bundle.MarkAsRead}"
+                                    update="messageTBL"
+                                    rendered="#{item.dateReading == null}"
+                                    actionListener="#{userMsgBean.markAsRead(item)}">
+                    </p:commandButton>
+                </p:column>
+            </p:dataTable>
     </ui:define>
 </ui:composition>
